<resources>
    <string name="app_name">Proyecto I.I</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="resultado">Resultado</string>
    <string name="puntaje">Puntaje</string>
    <string name="_00">00</string>
    <string name="aprobado">APROBADO</string>
    <string name="test_completado">¡Test Completado!</string>
    <string name="p_gina_principal">Página Principal</string>
</resources>