<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resultados">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="19dp"
        android:text="@string/test_completado"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="307dp"
        android:layout_height="153dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/completado" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="168dp"
        android:layout_height="30dp"
        android:text="@string/puntaje"
        android:textAlignment="center"
        android:textColor="#494848"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/pts"
        android:layout_width="149dp"
        android:layout_height="137dp"
        android:text="@string/_00"
        android:textAlignment="center"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/status"
        android:layout_width="158dp"
        android:layout_height="68dp"
        android:layout_marginBottom="11dp"
        android:text="@string/aprobado"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnToPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pts" />

    <Button
        android:id="@+id/btnToPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="37dp"
        android:text="@string/p_gina_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />
</androidx.constraintlayout.widget.ConstraintLayout>